parser.output
Terminals unused in grammar

    LIST


State 37 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: statement_list statement
    3               | statement

    4 statement: assignment
    5          | draw_command
    6          | if_else_statement
    7          | while_statement
    8          | function_definition
    9          | function_call
   10          | keypress_statement
   11          | return_statement
   12          | break_statement
   13          | continue_statement
   14          | print_statement
   15          | switch_case_statement
   16          | for_loop

   17 assignment: ID ASSIGN expression
   18           | ID AUG_ASSIGN expression

   19 expression: INT
   20           | FLOAT
   21           | STRING
   22           | ID
   23           | INPUT
   24           | expression '+' expression
   25           | expression '-' expression
   26           | expression '*' expression
   27           | expression '/' expression
   28           | expression '%' expression
   29           | expression POW expression
   30           | expression '=' expression
   31           | expression '<' expression
   32           | expression '>' expression
   33           | expression LE expression
   34           | expression GE expression
   35           | expression NEQ expression
   36           | expression VE expression
   37           | expression VEYA expression
   38           | DEGIL expression
   39           | '(' expression ')'
   40           | ID LBRACKET expression RBRACKET
   41           | list_literal

   42 list_literal: LBRACKET expression_list_opt RBRACKET

   43 expression_list_opt: ε
   44                    | expression_list

   45 expression_list: expression
   46                | expression ',' expression_list

   47 draw_command: DAIRE_CIZ expression expression expression
   48             | CIZGI_CIZ expression expression expression expression
   49             | DIKDORTGEN_CIZ expression expression expression expression
   50             | UCGEN_CIZ expression expression expression expression expression expression

   51 if_else_statement: EGER expression ISE block
   52                  | EGER expression ISE block AKSI block

   53 while_statement: DONGU expression IKEN block NEKI

   54 for_loop: FOR ID INT TO INT block

   55 function_definition: FONK ID param_list ':' block KNOF

   56 param_list: ε
   57           | ID param_list

   58 function_call: ID '(' ')'
   59              | ID '(' expression_list ')'

   60 keypress_statement: EGER TUS_BASILDI TUS_TURU ISE block

   61 return_statement: DONDUR expression

   62 break_statement: BREAK

   63 continue_statement: CONTINUE

   64 print_statement: PRINT expression

   65 switch_case_statement: SWITCH expression '{' case_blocks optional_default '}'

   66 case_blocks: case_blocks CASE INT ':' block
   67            | CASE INT ':' block

   68 optional_default: DEFAULT ':' block
   69                 | ε

   70 block: '{' inner_statements '}'

   71 inner_statements: ε
   72                 | statement_list


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 28
    '(' (40) 39 58 59
    ')' (41) 39 58 59
    '*' (42) 26
    '+' (43) 24
    ',' (44) 46
    '-' (45) 25
    '/' (47) 27
    ':' (58) 55 66 67 68
    '<' (60) 31
    '=' (61) 30
    '>' (62) 32
    '{' (123) 65 70
    '}' (125) 65 70
    error (256)
    INT <ival> (258) 19 54 66 67
    FLOAT <fval> (259) 20
    STRING <sval> (260) 21
    ID <sval> (261) 17 18 22 40 54 55 57 58 59
    ASSIGN (262) 17
    AUG_ASSIGN (263) 18
    EGER (264) 51 52 60
    AKSI (265) 52
    ISE (266) 51 52 60
    DONGU (267) 53
    IKEN (268) 53
    NEKI (269) 53
    FONK (270) 55
    KNOF (271) 55
    DONDUR (272) 61
    DAIRE_CIZ (273) 47
    CIZGI_CIZ (274) 48
    DIKDORTGEN_CIZ (275) 49
    UCGEN_CIZ (276) 50
    TUS_BASILDI (277) 60
    TUS_TURU (278) 60
    VE (279) 36
    VEYA (280) 37
    DEGIL (281) 38
    LE (282) 33
    GE (283) 34
    NEQ (284) 35
    POW (285) 29
    BREAK (286) 62
    CONTINUE (287) 63
    INPUT (288) 23
    PRINT (289) 64
    SWITCH (290) 65
    CASE (291) 66 67
    DEFAULT (292) 68
    LIST (293)
    FOR (294) 54
    TO (295) 54
    LBRACKET (296) 40 42
    RBRACKET (297) 40 42
    LOWER_THAN_ELSE (298)
    INDEX_ACCESS (299)


Nonterminals, with rules where they appear

    $accept (59)
        on left: 0
    program (60)
        on left: 1
        on right: 0
    statement_list (61)
        on left: 2 3
        on right: 1 2 72
    statement (62)
        on left: 4 5 6 7 8 9 10 11 12 13 14 15 16
        on right: 2 3
    assignment (63)
        on left: 17 18
        on right: 4
    expression (64)
        on left: 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41
        on right: 17 18 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 45 46 47 48 49 50 51 52 53 61 64 65
    list_literal (65)
        on left: 42
        on right: 41
    expression_list_opt (66)
        on left: 43 44
        on right: 42
    expression_list (67)
        on left: 45 46
        on right: 44 46 59
    draw_command (68)
        on left: 47 48 49 50
        on right: 5
    if_else_statement (69)
        on left: 51 52
        on right: 6
    while_statement (70)
        on left: 53
        on right: 7
    for_loop (71)
        on left: 54
        on right: 16
    function_definition (72)
        on left: 55
        on right: 8
    param_list (73)
        on left: 56 57
        on right: 55 57
    function_call (74)
        on left: 58 59
        on right: 9
    keypress_statement (75)
        on left: 60
        on right: 10
    return_statement (76)
        on left: 61
        on right: 11
    break_statement (77)
        on left: 62
        on right: 12
    continue_statement (78)
        on left: 63
        on right: 13
    print_statement (79)
        on left: 64
        on right: 14
    switch_case_statement (80)
        on left: 65
        on right: 15
    case_blocks (81)
        on left: 66 67
        on right: 65 66
    optional_default (82)
        on left: 68 69
        on right: 65
    block (83)
        on left: 70
        on right: 51 52 53 54 55 60 66 67 68
    inner_statements (84)
        on left: 71 72
        on right: 70


State 0

    0 $accept: • program $end

    ID              shift, and go to state 1
    EGER            shift, and go to state 2
    DONGU           shift, and go to state 3
    FONK            shift, and go to state 4
    DONDUR          shift, and go to state 5
    DAIRE_CIZ       shift, and go to state 6
    CIZGI_CIZ       shift, and go to state 7
    DIKDORTGEN_CIZ  shift, and go to state 8
    UCGEN_CIZ       shift, and go to state 9
    BREAK           shift, and go to state 10
    CONTINUE        shift, and go to state 11
    PRINT           shift, and go to state 12
    SWITCH          shift, and go to state 13
    FOR             shift, and go to state 14

    program                go to state 15
    statement_list         go to state 16
    statement              go to state 17
    assignment             go to state 18
    draw_command           go to state 19
    if_else_statement      go to state 20
    while_statement        go to state 21
    for_loop               go to state 22
    function_definition    go to state 23
    function_call          go to state 24
    keypress_statement     go to state 25
    return_statement       go to state 26
    break_statement        go to state 27
    continue_statement     go to state 28
    print_statement        go to state 29
    switch_case_statement  go to state 30


State 1

   17 assignment: ID • ASSIGN expression
   18           | ID • AUG_ASSIGN expression
   58 function_call: ID • '(' ')'
   59              | ID • '(' expression_list ')'

    ASSIGN      shift, and go to state 31
    AUG_ASSIGN  shift, and go to state 32
    '('         shift, and go to state 33


State 2

   51 if_else_statement: EGER • expression ISE block
   52                  | EGER • expression ISE block AKSI block
   60 keypress_statement: EGER • TUS_BASILDI TUS_TURU ISE block

    INT          shift, and go to state 34
    FLOAT        shift, and go to state 35
    STRING       shift, and go to state 36
    ID           shift, and go to state 37
    TUS_BASILDI  shift, and go to state 38
    DEGIL        shift, and go to state 39
    INPUT        shift, and go to state 40
    LBRACKET     shift, and go to state 41
    '('          shift, and go to state 42

    expression    go to state 43
    list_literal  go to state 44


State 3

   53 while_statement: DONGU • expression IKEN block NEKI

    INT       shift, and go to state 34
    FLOAT     shift, and go to state 35
    STRING    shift, and go to state 36
    ID        shift, and go to state 37
    DEGIL     shift, and go to state 39
    INPUT     shift, and go to state 40
    LBRACKET  shift, and go to state 41
    '('       shift, and go to state 42

    expression    go to state 45
    list_literal  go to state 44


State 4

   55 function_definition: FONK • ID param_list ':' block KNOF

    ID  shift, and go to state 46


State 5

   61 return_statement: DONDUR • expression

    INT       shift, and go to state 34
    FLOAT     shift, and go to state 35
    STRING    shift, and go to state 36
    ID        shift, and go to state 37
    DEGIL     shift, and go to state 39
    INPUT     shift, and go to state 40
    LBRACKET  shift, and go to state 41
    '('       shift, and go to state 42

    expression    go to state 47
    list_literal  go to state 44


State 6

   47 draw_command: DAIRE_CIZ • expression expression expression

    INT       shift, and go to state 34
    FLOAT     shift, and go to state 35
    STRING    shift, and go to state 36
    ID        shift, and go to state 37
    DEGIL     shift, and go to state 39
    INPUT     shift, and go to state 40
    LBRACKET  shift, and go to state 41
    '('       shift, and go to state 42

    expression    go to state 48
    list_literal  go to state 44


State 7

   48 draw_command: CIZGI_CIZ • expression expression expression expression

    INT       shift, and go to state 34
    FLOAT     shift, and go to state 35
    STRING    shift, and go to state 36
    ID        shift, and go to state 37
    DEGIL     shift, and go to state 39
    INPUT     shift, and go to state 40
    LBRACKET  shift, and go to state 41
    '('       shift, and go to state 42

    expression    go to state 49
    list_literal  go to state 44


State 8

   49 draw_command: DIKDORTGEN_CIZ • expression expression expression expression

    INT       shift, and go to state 34
    FLOAT     shift, and go to state 35
    STRING    shift, and go to state 36
    ID        shift, and go to state 37
    DEGIL     shift, and go to state 39
    INPUT     shift, and go to state 40
    LBRACKET  shift, and go to state 41
    '('       shift, and go to state 42

    expression    go to state 50
    list_literal  go to state 44


State 9

   50 draw_command: UCGEN_CIZ • expression expression expression expression expression expression

    INT       shift, and go to state 34
    FLOAT     shift, and go to state 35
    STRING    shift, and go to state 36
    ID        shift, and go to state 37
    DEGIL     shift, and go to state 39
    INPUT     shift, and go to state 40
    LBRACKET  shift, and go to state 41
    '('       shift, and go to state 42

    expression    go to state 51
    list_literal  go to state 44


State 10

   62 break_statement: BREAK •

    $default  reduce using rule 62 (break_statement)


State 11

   63 continue_statement: CONTINUE •

    $default  reduce using rule 63 (continue_statement)


State 12

   64 print_statement: PRINT • expression

    INT       shift, and go to state 34
    FLOAT     shift, and go to state 35
    STRING    shift, and go to state 36
    ID        shift, and go to state 37
    DEGIL     shift, and go to state 39
    INPUT     shift, and go to state 40
    LBRACKET  shift, and go to state 41
    '('       shift, and go to state 42

    expression    go to state 52
    list_literal  go to state 44


State 13

   65 switch_case_statement: SWITCH • expression '{' case_blocks optional_default '}'

    INT       shift, and go to state 34
    FLOAT     shift, and go to state 35
    STRING    shift, and go to state 36
    ID        shift, and go to state 37
    DEGIL     shift, and go to state 39
    INPUT     shift, and go to state 40
    LBRACKET  shift, and go to state 41
    '('       shift, and go to state 42

    expression    go to state 53
    list_literal  go to state 44


State 14

   54 for_loop: FOR • ID INT TO INT block

    ID  shift, and go to state 54


State 15

    0 $accept: program • $end

    $end  shift, and go to state 55


State 16

    1 program: statement_list •
    2 statement_list: statement_list • statement

    ID              shift, and go to state 1
    EGER            shift, and go to state 2
    DONGU           shift, and go to state 3
    FONK            shift, and go to state 4
    DONDUR          shift, and go to state 5
    DAIRE_CIZ       shift, and go to state 6
    CIZGI_CIZ       shift, and go to state 7
    DIKDORTGEN_CIZ  shift, and go to state 8
    UCGEN_CIZ       shift, and go to state 9
    BREAK           shift, and go to state 10
    CONTINUE        shift, and go to state 11
    PRINT           shift, and go to state 12
    SWITCH          shift, and go to state 13
    FOR             shift, and go to state 14

    $default  reduce using rule 1 (program)

    statement              go to state 56
    assignment             go to state 18
    draw_command           go to state 19
    if_else_statement      go to state 20
    while_statement        go to state 21
    for_loop               go to state 22
    function_definition    go to state 23
    function_call          go to state 24
    keypress_statement     go to state 25
    return_statement       go to state 26
    break_statement        go to state 27
    continue_statement     go to state 28
    print_statement        go to state 29
    switch_case_statement  go to state 30


State 17

    3 statement_list: statement •

    $default  reduce using rule 3 (statement_list)


State 18

    4 statement: assignment •

    $default  reduce using rule 4 (statement)


State 19

    5 statement: draw_command •

    $default  reduce using rule 5 (statement)


State 20

    6 statement: if_else_statement •

    $default  reduce using rule 6 (statement)


State 21

    7 statement: while_statement •

    $default  reduce using rule 7 (statement)


State 22

   16 statement: for_loop •

    $default  reduce using rule 16 (statement)


State 23

    8 statement: function_definition •

    $default  reduce using rule 8 (statement)


State 24

    9 statement: function_call •

    $default  reduce using rule 9 (statement)


State 25

   10 statement: keypress_statement •

    $default  reduce using rule 10 (statement)


State 26

   11 statement: return_statement •

    $default  reduce using rule 11 (statement)


State 27

   12 statement: break_statement •

    $default  reduce using rule 12 (statement)


State 28

   13 statement: continue_statement •

    $default  reduce using rule 13 (statement)


State 29

   14 statement: print_statement •

    $default  reduce using rule 14 (statement)


State 30

   15 statement: switch_case_statement •

    $default  reduce using rule 15 (statement)


State 31

   17 assignment: ID ASSIGN • expression

    INT       shift, and go to state 34
    FLOAT     shift, and go to state 35
    STRING    shift, and go to state 36
    ID        shift, and go to state 37
    DEGIL     shift, and go to state 39
    INPUT     shift, and go to state 40
    LBRACKET  shift, and go to state 41
    '('       shift, and go to state 42

    expression    go to state 57
    list_literal  go to state 44


State 32

   18 assignment: ID AUG_ASSIGN • expression

    INT       shift, and go to state 34
    FLOAT     shift, and go to state 35
    STRING    shift, and go to state 36
    ID        shift, and go to state 37
    DEGIL     shift, and go to state 39
    INPUT     shift, and go to state 40
    LBRACKET  shift, and go to state 41
    '('       shift, and go to state 42

    expression    go to state 58
    list_literal  go to state 44


State 33

   58 function_call: ID '(' • ')'
   59              | ID '(' • expression_list ')'

    INT       shift, and go to state 34
    FLOAT     shift, and go to state 35
    STRING    shift, and go to state 36
    ID        shift, and go to state 37
    DEGIL     shift, and go to state 39
    INPUT     shift, and go to state 40
    LBRACKET  shift, and go to state 41
    '('       shift, and go to state 42
    ')'       shift, and go to state 59

    expression       go to state 60
    list_literal     go to state 44
    expression_list  go to state 61


State 34

   19 expression: INT •

    $default  reduce using rule 19 (expression)


State 35

   20 expression: FLOAT •

    $default  reduce using rule 20 (expression)


State 36

   21 expression: STRING •

    $default  reduce using rule 21 (expression)


State 37

   22 expression: ID •
   40           | ID • LBRACKET expression RBRACKET

    LBRACKET  shift, and go to state 62

    LBRACKET  [reduce using rule 22 (expression)]
    $default  reduce using rule 22 (expression)


State 38

   60 keypress_statement: EGER TUS_BASILDI • TUS_TURU ISE block

    TUS_TURU  shift, and go to state 63


State 39

   38 expression: DEGIL • expression

    INT       shift, and go to state 34
    FLOAT     shift, and go to state 35
    STRING    shift, and go to state 36
    ID        shift, and go to state 37
    DEGIL     shift, and go to state 39
    INPUT     shift, and go to state 40
    LBRACKET  shift, and go to state 41
    '('       shift, and go to state 42

    expression    go to state 64
    list_literal  go to state 44


State 40

   23 expression: INPUT •

    $default  reduce using rule 23 (expression)


State 41

   42 list_literal: LBRACKET • expression_list_opt RBRACKET

    INT       shift, and go to state 34
    FLOAT     shift, and go to state 35
    STRING    shift, and go to state 36
    ID        shift, and go to state 37
    DEGIL     shift, and go to state 39
    INPUT     shift, and go to state 40
    LBRACKET  shift, and go to state 41
    '('       shift, and go to state 42

    $default  reduce using rule 43 (expression_list_opt)

    expression           go to state 60
    list_literal         go to state 44
    expression_list_opt  go to state 65
    expression_list      go to state 66


State 42

   39 expression: '(' • expression ')'

    INT       shift, and go to state 34
    FLOAT     shift, and go to state 35
    STRING    shift, and go to state 36
    ID        shift, and go to state 37
    DEGIL     shift, and go to state 39
    INPUT     shift, and go to state 40
    LBRACKET  shift, and go to state 41
    '('       shift, and go to state 42

    expression    go to state 67
    list_literal  go to state 44


State 43

   24 expression: expression • '+' expression
   25           | expression • '-' expression
   26           | expression • '*' expression
   27           | expression • '/' expression
   28           | expression • '%' expression
   29           | expression • POW expression
   30           | expression • '=' expression
   31           | expression • '<' expression
   32           | expression • '>' expression
   33           | expression • LE expression
   34           | expression • GE expression
   35           | expression • NEQ expression
   36           | expression • VE expression
   37           | expression • VEYA expression
   51 if_else_statement: EGER expression • ISE block
   52                  | EGER expression • ISE block AKSI block

    ISE   shift, and go to state 68
    VE    shift, and go to state 69
    VEYA  shift, and go to state 70
    LE    shift, and go to state 71
    GE    shift, and go to state 72
    NEQ   shift, and go to state 73
    POW   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '%'   shift, and go to state 79
    '='   shift, and go to state 80
    '<'   shift, and go to state 81
    '>'   shift, and go to state 82


State 44

   41 expression: list_literal •

    $default  reduce using rule 41 (expression)


State 45

   24 expression: expression • '+' expression
   25           | expression • '-' expression
   26           | expression • '*' expression
   27           | expression • '/' expression
   28           | expression • '%' expression
   29           | expression • POW expression
   30           | expression • '=' expression
   31           | expression • '<' expression
   32           | expression • '>' expression
   33           | expression • LE expression
   34           | expression • GE expression
   35           | expression • NEQ expression
   36           | expression • VE expression
   37           | expression • VEYA expression
   53 while_statement: DONGU expression • IKEN block NEKI

    IKEN  shift, and go to state 83
    VE    shift, and go to state 69
    VEYA  shift, and go to state 70
    LE    shift, and go to state 71
    GE    shift, and go to state 72
    NEQ   shift, and go to state 73
    POW   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '%'   shift, and go to state 79
    '='   shift, and go to state 80
    '<'   shift, and go to state 81
    '>'   shift, and go to state 82


State 46

   55 function_definition: FONK ID • param_list ':' block KNOF

    ID  shift, and go to state 84

    $default  reduce using rule 56 (param_list)

    param_list  go to state 85


State 47

   24 expression: expression • '+' expression
   25           | expression • '-' expression
   26           | expression • '*' expression
   27           | expression • '/' expression
   28           | expression • '%' expression
   29           | expression • POW expression
   30           | expression • '=' expression
   31           | expression • '<' expression
   32           | expression • '>' expression
   33           | expression • LE expression
   34           | expression • GE expression
   35           | expression • NEQ expression
   36           | expression • VE expression
   37           | expression • VEYA expression
   61 return_statement: DONDUR expression •

    VE    shift, and go to state 69
    VEYA  shift, and go to state 70
    LE    shift, and go to state 71
    GE    shift, and go to state 72
    NEQ   shift, and go to state 73
    POW   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '%'   shift, and go to state 79
    '='   shift, and go to state 80
    '<'   shift, and go to state 81
    '>'   shift, and go to state 82

    $default  reduce using rule 61 (return_statement)


State 48

   24 expression: expression • '+' expression
   25           | expression • '-' expression
   26           | expression • '*' expression
   27           | expression • '/' expression
   28           | expression • '%' expression
   29           | expression • POW expression
   30           | expression • '=' expression
   31           | expression • '<' expression
   32           | expression • '>' expression
   33           | expression • LE expression
   34           | expression • GE expression
   35           | expression • NEQ expression
   36           | expression • VE expression
   37           | expression • VEYA expression
   47 draw_command: DAIRE_CIZ expression • expression expression

    INT       shift, and go to state 34
    FLOAT     shift, and go to state 35
    STRING    shift, and go to state 36
    ID        shift, and go to state 37
    VE        shift, and go to state 69
    VEYA      shift, and go to state 70
    DEGIL     shift, and go to state 39
    LE        shift, and go to state 71
    GE        shift, and go to state 72
    NEQ       shift, and go to state 73
    POW       shift, and go to state 74
    INPUT     shift, and go to state 40
    LBRACKET  shift, and go to state 41
    '+'       shift, and go to state 75
    '-'       shift, and go to state 76
    '*'       shift, and go to state 77
    '/'       shift, and go to state 78
    '%'       shift, and go to state 79
    '='       shift, and go to state 80
    '<'       shift, and go to state 81
    '>'       shift, and go to state 82
    '('       shift, and go to state 42

    expression    go to state 86
    list_literal  go to state 44


State 49

   24 expression: expression • '+' expression
   25           | expression • '-' expression
   26           | expression • '*' expression
   27           | expression • '/' expression
   28           | expression • '%' expression
   29           | expression • POW expression
   30           | expression • '=' expression
   31           | expression • '<' expression
   32           | expression • '>' expression
   33           | expression • LE expression
   34           | expression • GE expression
   35           | expression • NEQ expression
   36           | expression • VE expression
   37           | expression • VEYA expression
   48 draw_command: CIZGI_CIZ expression • expression expression expression

    INT       shift, and go to state 34
    FLOAT     shift, and go to state 35
    STRING    shift, and go to state 36
    ID        shift, and go to state 37
    VE        shift, and go to state 69
    VEYA      shift, and go to state 70
    DEGIL     shift, and go to state 39
    LE        shift, and go to state 71
    GE        shift, and go to state 72
    NEQ       shift, and go to state 73
    POW       shift, and go to state 74
    INPUT     shift, and go to state 40
    LBRACKET  shift, and go to state 41
    '+'       shift, and go to state 75
    '-'       shift, and go to state 76
    '*'       shift, and go to state 77
    '/'       shift, and go to state 78
    '%'       shift, and go to state 79
    '='       shift, and go to state 80
    '<'       shift, and go to state 81
    '>'       shift, and go to state 82
    '('       shift, and go to state 42

    expression    go to state 87
    list_literal  go to state 44


State 50

   24 expression: expression • '+' expression
   25           | expression • '-' expression
   26           | expression • '*' expression
   27           | expression • '/' expression
   28           | expression • '%' expression
   29           | expression • POW expression
   30           | expression • '=' expression
   31           | expression • '<' expression
   32           | expression • '>' expression
   33           | expression • LE expression
   34           | expression • GE expression
   35           | expression • NEQ expression
   36           | expression • VE expression
   37           | expression • VEYA expression
   49 draw_command: DIKDORTGEN_CIZ expression • expression expression expression

    INT       shift, and go to state 34
    FLOAT     shift, and go to state 35
    STRING    shift, and go to state 36
    ID        shift, and go to state 37
    VE        shift, and go to state 69
    VEYA      shift, and go to state 70
    DEGIL     shift, and go to state 39
    LE        shift, and go to state 71
    GE        shift, and go to state 72
    NEQ       shift, and go to state 73
    POW       shift, and go to state 74
    INPUT     shift, and go to state 40
    LBRACKET  shift, and go to state 41
    '+'       shift, and go to state 75
    '-'       shift, and go to state 76
    '*'       shift, and go to state 77
    '/'       shift, and go to state 78
    '%'       shift, and go to state 79
    '='       shift, and go to state 80
    '<'       shift, and go to state 81
    '>'       shift, and go to state 82
    '('       shift, and go to state 42

    expression    go to state 88
    list_literal  go to state 44


State 51

   24 expression: expression • '+' expression
   25           | expression • '-' expression
   26           | expression • '*' expression
   27           | expression • '/' expression
   28           | expression • '%' expression
   29           | expression • POW expression
   30           | expression • '=' expression
   31           | expression • '<' expression
   32           | expression • '>' expression
   33           | expression • LE expression
   34           | expression • GE expression
   35           | expression • NEQ expression
   36           | expression • VE expression
   37           | expression • VEYA expression
   50 draw_command: UCGEN_CIZ expression • expression expression expression expression expression

    INT       shift, and go to state 34
    FLOAT     shift, and go to state 35
    STRING    shift, and go to state 36
    ID        shift, and go to state 37
    VE        shift, and go to state 69
    VEYA      shift, and go to state 70
    DEGIL     shift, and go to state 39
    LE        shift, and go to state 71
    GE        shift, and go to state 72
    NEQ       shift, and go to state 73
    POW       shift, and go to state 74
    INPUT     shift, and go to state 40
    LBRACKET  shift, and go to state 41
    '+'       shift, and go to state 75
    '-'       shift, and go to state 76
    '*'       shift, and go to state 77
    '/'       shift, and go to state 78
    '%'       shift, and go to state 79
    '='       shift, and go to state 80
    '<'       shift, and go to state 81
    '>'       shift, and go to state 82
    '('       shift, and go to state 42

    expression    go to state 89
    list_literal  go to state 44


State 52

   24 expression: expression • '+' expression
   25           | expression • '-' expression
   26           | expression • '*' expression
   27           | expression • '/' expression
   28           | expression • '%' expression
   29           | expression • POW expression
   30           | expression • '=' expression
   31           | expression • '<' expression
   32           | expression • '>' expression
   33           | expression • LE expression
   34           | expression • GE expression
   35           | expression • NEQ expression
   36           | expression • VE expression
   37           | expression • VEYA expression
   64 print_statement: PRINT expression •

    VE    shift, and go to state 69
    VEYA  shift, and go to state 70
    LE    shift, and go to state 71
    GE    shift, and go to state 72
    NEQ   shift, and go to state 73
    POW   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '%'   shift, and go to state 79
    '='   shift, and go to state 80
    '<'   shift, and go to state 81
    '>'   shift, and go to state 82

    $default  reduce using rule 64 (print_statement)


State 53

   24 expression: expression • '+' expression
   25           | expression • '-' expression
   26           | expression • '*' expression
   27           | expression • '/' expression
   28           | expression • '%' expression
   29           | expression • POW expression
   30           | expression • '=' expression
   31           | expression • '<' expression
   32           | expression • '>' expression
   33           | expression • LE expression
   34           | expression • GE expression
   35           | expression • NEQ expression
   36           | expression • VE expression
   37           | expression • VEYA expression
   65 switch_case_statement: SWITCH expression • '{' case_blocks optional_default '}'

    VE    shift, and go to state 69
    VEYA  shift, and go to state 70
    LE    shift, and go to state 71
    GE    shift, and go to state 72
    NEQ   shift, and go to state 73
    POW   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '%'   shift, and go to state 79
    '='   shift, and go to state 80
    '<'   shift, and go to state 81
    '>'   shift, and go to state 82
    '{'   shift, and go to state 90


State 54

   54 for_loop: FOR ID • INT TO INT block

    INT  shift, and go to state 91


State 55

    0 $accept: program $end •

    $default  accept


State 56

    2 statement_list: statement_list statement •

    $default  reduce using rule 2 (statement_list)


State 57

   17 assignment: ID ASSIGN expression •
   24 expression: expression • '+' expression
   25           | expression • '-' expression
   26           | expression • '*' expression
   27           | expression • '/' expression
   28           | expression • '%' expression
   29           | expression • POW expression
   30           | expression • '=' expression
   31           | expression • '<' expression
   32           | expression • '>' expression
   33           | expression • LE expression
   34           | expression • GE expression
   35           | expression • NEQ expression
   36           | expression • VE expression
   37           | expression • VEYA expression

    VE    shift, and go to state 69
    VEYA  shift, and go to state 70
    LE    shift, and go to state 71
    GE    shift, and go to state 72
    NEQ   shift, and go to state 73
    POW   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '%'   shift, and go to state 79
    '='   shift, and go to state 80
    '<'   shift, and go to state 81
    '>'   shift, and go to state 82

    $default  reduce using rule 17 (assignment)


State 58

   18 assignment: ID AUG_ASSIGN expression •
   24 expression: expression • '+' expression
   25           | expression • '-' expression
   26           | expression • '*' expression
   27           | expression • '/' expression
   28           | expression • '%' expression
   29           | expression • POW expression
   30           | expression • '=' expression
   31           | expression • '<' expression
   32           | expression • '>' expression
   33           | expression • LE expression
   34           | expression • GE expression
   35           | expression • NEQ expression
   36           | expression • VE expression
   37           | expression • VEYA expression

    VE    shift, and go to state 69
    VEYA  shift, and go to state 70
    LE    shift, and go to state 71
    GE    shift, and go to state 72
    NEQ   shift, and go to state 73
    POW   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '%'   shift, and go to state 79
    '='   shift, and go to state 80
    '<'   shift, and go to state 81
    '>'   shift, and go to state 82

    $default  reduce using rule 18 (assignment)


State 59

   58 function_call: ID '(' ')' •

    $default  reduce using rule 58 (function_call)


State 60
